# vk-operation

./: .gitignore  meson.build
include/vk/: vk-buffer.hpp  vk-command.hpp  vk-descriptor.hpp  vk-device.hpp  vk-instance.hpp  vk-memory.hpp  vk-pipeline.hpp  vk-queue.hpp  vk-shader.hpp  vk.hpp
shader/: naive-prefix.comp
source/: main-prefix.cpp  vk-device.cpp  vk-instance.cpp  vk-prefix.cpp  vk-shader.cpp
